# resources

./: README.md  pyproject.toml
src/scripts/: examples.py
src/segalign/: __init__.py  alignment.py  helpers.py  similarityMetrics.py
